--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -1,120 +1,140 @@
 :root {
-  --my-yellow: rgb(252, 184, 38);
-  --my-dark-yellow: rgb(245, 168, 3);
+	--my-yellow: rgb(252, 184, 38);
+	--my-dark-yellow: rgb(245, 168, 3);
 }
 
 /* Navbar */
 .navbar {
-  background-color: #18121e7a;
+	background-color: #18121e7a;
 }
 .navbarBrand {
-  color: var(--my-yellow) !important;
-  font-weight: 600;
-  letter-spacing: 1px;
+	color: var(--my-yellow) !important;
+	font-weight: 600;
+	letter-spacing: 1px;
 }
 
 .navLink {
-  font-size: 1.2rem;
-  font-weight: 400;
-  color: var(--my-yellow) !important;
+	font-size: 1.2rem;
+	font-weight: 400;
+	color: var(--my-yellow) !important;
 }
 .navLink:hover {
-  color: #efefef !important;
-  transition-duration: 400ms;
-  text-shadow: 2px 2px #a9a9a9;
-  cursor: pointer;
+	color: #efefef !important;
+	transition-duration: 400ms;
+	text-shadow: 2px 2px #a9a9a9;
+	cursor: pointer;
 }
 
 .navbarToggler {
-  margin-right: 1rem;
-  color: var(--my-yellow);
+	margin-right: 1rem;
+	color: var(--my-yellow);
 }
 
 /* TopBox */
 
 .topBoxChrome {
-  height: 100vh;
-  background-image: url(../img/homepage/trees.webp);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: right;
-  padding-top: 40vh;
-  color: lightcyan;
+	height: 100vh;
+	background-image: url(../img/homepage/trees.webp);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: right;
+	padding-top: 40vh;
+	color: lightcyan;
 }
 
 .topBoxOther {
-  height: 100vh;
-  background-image: url(../img/homepage/trees.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding-top: 40vh;
-  color: white;
+	height: 100vh;
+	background-image: url(../img/homepage/trees.jpeg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	padding-top: 40vh;
+	color: white;
 }
 
 .topBoxLink {
-  text-decoration: none;
-  color: lightcyan;
+	text-decoration: none;
+	color: lightcyan;
 }
 .topBoxLink:hover {
-  color: var(--my-dark-yellow);
-  transition: 300ms;
+	color: var(--my-dark-yellow);
+	transition: 300ms;
 }
 
 .topBoxContent {
-  width: 30vw;
-  margin: auto;
+	width: 30vw;
+	margin: auto;
 }
 
 /* Projects */
 
 .projects {
-  background-color: rgba(139, 139, 139, 0.5);
-  color: #233237;
+	background-color: rgba(139, 139, 139, 0.5);
+	color: #233237;
 }
 
 .projectRow {
-  padding-top: 2rem;
-  padding-bottom: 1rem;
+	padding-top: 2rem;
+	padding-bottom: 1rem;
 }
 
 .projectBox {
-  width: 100vw;
+	width: 100vw;
 }
 
 .projectCard {
-  width: 30% !important;
+	width: 30% !important;
 }
 
-.devconnector {
-  background: url("https://www.w3schools.com/w3css/img_lights.jpg");
+/* Contact Area */
+
+#contact {
+	background-color: #18121e;
+}
+
+#contact h2 {
+	color: lightcyan;
+	letter-spacing: 1px;
+}
+
+#formCard {
+	background-color: transparent;
+	padding: 20px;
+}
+
+#message {
+	min-height: 120px;
+}
+
+.footer {
+	background: black;
 }
 
 @media (max-width: 1166px) {
-  .topBoxContent {
-    width: 40vw;
-  }
+	.topBoxContent {
+		width: 40vw;
+	}
 }
 
 @media (max-width: 991px) {
-  .topBoxContent {
-    width: 50vw;
-  }
-  .projectRow {
-    padding-top: 0;
-  }
-  .projectCard {
-    width: 90% !important;
-    margin-top: 20px;
-  }
+	.topBoxContent {
+		width: 50vw;
+	}
+	.projectRow {
+		padding-top: 0;
+	}
+	.projectCard {
+		width: 90% !important;
+		margin-top: 20px;
+	}
 }
 
 @media (max-width: 700px) {
-  .topBoxContent {
-    width: 75vw;
-  }
+	.topBoxContent {
+		width: 75vw;
+	}
 }
 @media (max-width: 468px) {
-  .topBoxContent {
-    width: 95vw;
-  }
+	.topBoxContent {
+		width: 95vw;
+	}
 }
